--- a/index.html
+++ b/index.html
@@ -59,14 +59,9 @@
     .option-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:.75rem;margin-top:.75rem;}
     .option{border:1px solid #e6e6e6;border-radius:10px;padding:.75rem;background:#fafafa;}
     .option label{display:block;cursor:pointer;line-height:1.35;}
-    .helper{font-size:.92rem;color:#526479;margin:.4rem 0 .1rem}
-    .step-actions{display:flex;flex-wrap:wrap;gap:.5rem;justify-content:space-between;margin-top:1rem;}
-    .warn{color:#b54708;background:#fff7ed;padding:.5rem .75rem;border-radius:8px;border:1px solid #fde68a;display:none;}
-    .small{font-size:.9rem;color:#516170;}
     ul{margin:.4rem 0 0 1rem}
     .footer-space{height:12px;}
     .scenario{background:#f8fafc;border:1px solid #e2e8f0;border-radius:12px;padding:1rem;margin-top:12px;}
-    .scenario h4{margin:.2rem 0 .4rem}
     .notice-panel{background:#f8fafc;border:1px solid #d1d5db;border-radius:12px;padding:1rem;margin-top:1rem;display:none;}
   </style>
 </head>
@@ -82,7 +77,7 @@
   Votre navigateur ne supporte pas l'audio.
 </audio>
 
-<!-- ACCUEIL avec la nouvelle image -->
+<!-- ACCUEIL -->
 <div id="home" class="screen active">
   <div class="container">
     <img class="hero" src="images/accueil_salle_formation.png" alt="Salle de formation moderne en Guyane avec formateurs et participants">
@@ -102,7 +97,7 @@
   </div>
 </div>
 
-<!-- JEU 1 : écran d'accueil spécifique (image + boutons uniquement) -->
+<!-- Jeu 1 : intro -->
 <div id="game1_intro" class="screen">
   <div class="container">
     <img class="hero" src="images/tilesia_accueil_alex.png" alt="Accueil du jeu 1 - Alex TILESA">
@@ -113,7 +108,7 @@
   </div>
 </div>
 
-<!-- JEU 1 : carte + assistant QCM + résumé + score -->
+<!-- Jeu 1 : carte -->
 <div id="game1" class="screen">
   <div class="container">
     <h2>Jeu n°1 — Explorer les services</h2>
@@ -138,10 +133,11 @@
   </div>
 </div>
 
+<!-- Jeu 1 : Assistant QCM -->
 <div id="builder1" class="screen">
   <div class="container">
     <h2>Jeu n°1 — Assistant (QCM)</h2>
-    <div class="small">Sélectionnez les éléments pertinents à chaque étape.</div>
+    <div class="muted">Sélectionnez les éléments pertinents à chaque étape.</div>
     <div class="progress"><span id="builderProgress1"></span></div>
     <div class="tabs" id="builderTabs1"></div>
     <div id="builderPanels1"></div>
@@ -157,6 +153,7 @@
   </div>
 </div>
 
+<!-- Jeu 1 : Résumé + Score -->
 <div id="summary1" class="screen">
   <div class="container">
     <h2>Résumé — Jeu n°1</h2>
@@ -171,7 +168,7 @@
   </div>
 </div>
 
-<!-- JEU 2 : écran d'accueil spécifique (avec image + boutons) -->
+<!-- Jeu 2 : intro -->
 <div id="game2_intro" class="screen">
   <div class="container">
     <img class="hero" src="images/lea_centrale_LESATI.png" alt="Accueil du jeu 2 - Léa devant la centrale">
@@ -184,7 +181,7 @@
   </div>
 </div>
 
-<!-- JEU 2 : carte (4 onglets LESATI) + bouton CCTP (pas de redirection) -->
+<!-- Jeu 2 : carte -->
 <div id="game2" class="screen">
   <div class="container">
     <h2>Jeu n°2 — Suivez Léa (LESATI)</h2>
@@ -216,7 +213,7 @@
   </div>
 </div>
 
-<!-- (Conservé mais non déclenché automatiquement) -->
+<!-- (Optionnel) Écran fin de mission J2 -->
 <div id="summary2" class="screen">
   <div class="container">
     <h2>Fin de mission — Jeu n°2</h2>
@@ -249,14 +246,14 @@
 </div>
 
 <script>
-  // Base
+  // Navigation de base
   const screens=document.querySelectorAll('.screen');
   const clickSound=document.getElementById('clickSound');
   function playClick(){try{clickSound.currentTime=0;clickSound.play();}catch(e){}}
   function goTo(id){screens.forEach(s=>s.classList.remove('active'));document.getElementById(id).classList.add('active');}
   function startGame(n){ goTo(n===1?'game1_intro':'game2_intro'); }
 
-  // Textes & images Jeu 1
+  // Données Jeu 1 (TILESA)
   const modalData1={
     'Direction':{ text:"Le président vous accueille : « La santé et la sécurité sont mes priorités pour garantir le bon fonctionnement de l’entreprise et le bien-être des salariés. »", image:"images/tilesia_direction.png" },
     'Technique':{ text:`Intervention pendant les heures ouvrables, sauf cas exceptionnel. Pour les locaux électriques, le titulaire sera accompagné d'un employé disposant des habilitations requises.
@@ -273,7 +270,7 @@ Les consommables à la charge du prestataire sont les suivants :
     'Juridique':{ text:"La juriste rappelle les prescriptions du Décret 92-158 du 20 février 1992 reprises dans le Code du travail (articles R.237-1 et R.237-28), applicables aux travaux réalisés dans l’établissement par une entreprise extérieure.", image:"images/tilesia_juridique.png" }
   };
 
-  // Textes & images Jeu 2 (LESATI) — ***Mises à jour demandées***
+  // Données Jeu 2 (LESATI) — textes mis à jour
   const modalData2={
     'Direction':{
       text:'La directrice s\\'explique: "L\\'entreprise LESATI assure les missions de production, distribution et commercialisation de l\\'énergie dans la commune de Saint Georges. La mission de service public et la proximité client sont nos priorités".',
@@ -293,14 +290,11 @@ Les consommables à la charge du prestataire sont les suivants :
     }
   };
 
-  let currentService='';
-  let currentGame=1;
-  let collected1=new Set();
-  let collected2=new Set();
+  let currentService=''; let currentGame=1;
+  let collected1=new Set(); let collected2=new Set();
 
   function openModal(service, game=1){
-    currentGame = game;
-    currentService = service;
+    currentGame = game; currentService = service;
     const data = game===2 ? modalData2 : modalData1;
     const item = data[service];
     document.getElementById('modalTitle').innerText=service;
@@ -317,7 +311,6 @@ Les consommables à la charge du prestataire sont les suivants :
     if(currentGame===2){
       collected2.add(currentService);
       document.getElementById('infoLog2').innerText=`Informations collectées (LESATI) : ${Array.from(collected2).join(', ')}`;
-      // Afficher le bouton quand 4 services visités, sans redirection
       if(collected2.size>=4){
         const btn = document.getElementById('btnCCTP2');
         if(btn) btn.style.display='inline-block';
@@ -329,7 +322,7 @@ Les consommables à la charge du prestataire sont les suivants :
     closeModal();
   }
 
-  // ---------- Jeu 1 : Assistant QCM + score ----------
+  // Assistant QCM Jeu 1
   const steps1=[
     { id:"objet", label:"Objet", help:"Il sert à définir l’objet du cahier des charges. Il ne doit pas comporter d’autre mention que cette définition.",
       options:[ "Prestation de nettoyage intérieur des locaux du site TILESIA", "Périmètre: bureaux, circulation, escaliers, ascenseur, sanitaires, vestiaires, réfectoires", "Objectif: propreté, hygiène et confort des utilisateurs" ] },
@@ -369,8 +362,7 @@ Les consommables à la charge du prestataire sont les suivants :
         const p=document.createElement('div'); p.className='tab-panel'+(i===0?' active':''); p.id=`panel1-${s.id}`;
         p.innerHTML=`
           <h3>${i+1}. ${s.label}</h3>
-          <div class="help"><details><summary>Aide (facultatif)</summary><p>${s.help||""}</p></details></div>
-          <div class="helper">Sélectionnez les éléments pertinents pour votre CCTP.</div>
+          <div class="muted" style="margin:.25rem 0 .5rem"><details><summary>Aide (facultatif)</summary><p>${s.help||""}</p></details></div>
           <div class="option-grid">
             ${s.options.map((opt,idx)=>`
               <div class="option"><label><input type="checkbox" data-step="${s.id}" data-opt="${idx}"> ${opt}</label></div>
